@@ -121,6 +121,11 @@ API Changes
 * LUCENE-4844: removed TaxonomyReader.getParent(), you should use
   TaxonomyReader.getParallelArrays().parents() instead. (Shai Erera)
 
+Bug Fixes
+
+* LUCENE-4868: SumScoreFacetsAggregator used an incorrect index into
+  the scores array. (Shai Erera)
+
 Documentation
 
 * LUCENE-4841: Added example SimpleSortedSetFacetsExample to show how
